@@ -1,12 +1,15 @@
 package com.bot.performance.service;
 
 import com.bot.performance.model.*;
+import com.bot.performance.repository.CompanySettingRepository;
+import com.bot.performance.repository.EmployeeRoleRepository;
 import com.bot.performance.repository.PerformanceObjectiveRepository;
 import com.bot.performance.repository.PerformanceRepository;
 import com.bot.performance.serviceinterface.IPerformanceService;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import org.javatuples.Pair;
 import org.jetbrains.annotations.NotNull;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
@@ -15,9 +18,7 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -30,10 +31,18 @@ public class PerformanceService implements IPerformanceService {
     PerformanceObjectiveRepository performanceObjectiveRepository;
     @Autowired
     CurrentSession currentUserDetail;
-
+    @Autowired
+    EmployeeRoleRepository employeeRoleRepository;
+    @Autowired
+    CompanySettingRepository companySettingRepository;
     public List<EmployeePerformance> GetAllEmpPerformanceService() {
         var result = performanceRepository.findAll();
         return result;
+    }
+
+    public List<?> getEmployeeByManagerId(long managerId) {
+        var apprisalEmployeeDetails = this.performanceRepository.getEmployeeByManagerId(managerId);
+        return apprisalEmployeeDetails;
     }
 
     public List<PerfomanceObjective> GetEmployeeObjectiveService(int designationId, int companyId, long employeeId) throws Exception {
@@ -48,41 +57,55 @@ public class PerformanceService implements IPerformanceService {
             throw new Exception("Invalid employee. Please login again");
 
         var objectives = performanceObjectiveRepository.findAll();
-        if (objectives == null || objectives.size() <= 0)
+        if (objectives.size() == 0)
             throw new Exception("Performance objective not found");
 
         var empPerformanceObj = performanceRepository.getEmpPerformanceByEmpId(employeeId);
+        var companySettingDetail = companySettingRepository.findAll().stream().findFirst();
+        if(companySettingDetail.isEmpty()) {
+            throw new Exception("Company detail not found. Please contact to admin.");
+        }
+
+        var companyDetail  = companySettingDetail.get();
         objectives.forEach(x -> {
-            if (!x.getTag().isEmpty() &&x.getTag() != null) {
-                var isObjSee = true;
-                if (currentUserDetail.getUserDetail().getRoleId() == 2 && x.isObjSeeType())
-                    isObjSee = false;
+            if (!x.getTag().isEmpty() && x.getTag() != null) {
+                x.setDeclarationEndMonth(companyDetail.getDeclarationEndMonth());
+                x.setDeclarationStartMonth(companyDetail.getDeclarationStartMonth());
+                x.setFinancialYear(companyDetail.getFinancialYear());
+                var canSeeObject = true;
+//                if (currentUserDetail.getUserDetail().getRoleId() == 2 && x.isObjSeeType())
+//                    isObjSee = false;
 
-                if (isObjSee) {
-                    try {
-                        x.setTagRole(objectMapper.readValue(x.getTag(), new TypeReference<List<Integer>>() {}));
-                    } catch (JsonProcessingException e) {
-                        throw new RuntimeException(e);
-                    }
+                try {
+                    x.setTagRole(objectMapper.readValue(x.getTag(), new TypeReference<List<Integer>>(){}));
+                } catch (JsonProcessingException e) {
+                    throw new RuntimeException(e);
+                }
 
-                    var value = x.getTagRole().stream().filter(i -> i == designationId).collect(Collectors.toList());
-                    if (value.size() > 0)
-                        empObjective.add(x);
+                var value = x.getTagRole().stream().filter(i -> i == designationId).toList();
+                if (value.size() > 0)
+                    empObjective.add(x);
 
-                    if (empPerformanceObj != null && empPerformanceObj.size() > 0 && empObjective.size() > 0) {
-                        var objective = empPerformanceObj.stream().filter(i -> i.getObjectiveId() == x.getObjectiveId()).findFirst();
+                if (empPerformanceObj.size() > 0 && empObjective.size() > 0) {
+                    var objective = empPerformanceObj.stream()
+                            .filter(i -> i.getObjectiveId().equals(x.getObjectiveId()))
+                            .findFirst();
+
+                    if (objective.isPresent()) {
                         var obj = objective.get();
-
-                        if (obj != null) {
-                            x.setCurrentValue(obj.getCurrentValue());
-                            x.setUpdatedOn(obj.getUpdatedOn());
-                            x.setStatus(obj.getStatus());
-                            x.setEmployeePerformanceId(obj.getEmployeePerformanceId());
-                            try {
-                                x.setPerformanceDetail(objectMapper.readValue(obj.getPerformanceDetail(), new TypeReference<ArrayList<PerformanceDetail>>(){}));
-                            } catch (JsonProcessingException e) {
-                                throw new RuntimeException(e);
-                            }
+                        x.setCurrentValue(obj.getCurrentValue());
+                        x.setUpdatedOn(obj.getUpdatedOn());
+                        x.setStatus(obj.getStatus());
+                        x.setEmployeePerformanceId(obj.getEmployeePerformanceId());
+                        x.setComments(obj.getComments());
+                        try {
+                            x.setPerformanceDetail(objectMapper.readValue(obj.getPerformanceDetail(), new TypeReference<ArrayList<PerformanceDetail>>(){}));
+                            x.setPerformanceDetail(x.getPerformanceDetail().stream()
+                                    .sorted((a, b) -> {
+                                       return b.getUpdatedOn().compareTo(a.getUpdatedOn());
+                                    }).toList());
+                        } catch (JsonProcessingException e) {
+                            throw new RuntimeException(e);
                         }
                     }
                 }
@@ -96,23 +119,28 @@ public class PerformanceService implements IPerformanceService {
         java.util.Date utilDate = new java.util.Date();
         var date = new java.sql.Timestamp(utilDate.getTime());
 
-        PerformanceDetail performanceDetail = new PerformanceDetail();
+        EmployeePerformance existEmpPerformance = null;
         var performanceDetails = new ArrayList<PerformanceDetail>();
+        PerformanceDetail performanceDetail = new PerformanceDetail();
+
         Optional<EmployeePerformance> existEmpPerformanceData = performanceRepository.findById(employeePerformance.getEmployeePerformanceId());
-        var existEmpPerformance = existEmpPerformanceData.get();
+        if (existEmpPerformanceData.isPresent())
+            existEmpPerformance =  existEmpPerformanceData.get();
 
         if (existEmpPerformance == null)
         {
             var lastPerformance = performanceRepository.getLastEmployeePerformance();
-            existEmpPerformance.setEmployeePerformanceId(lastPerformance.getEmployeePerformanceId());
             existEmpPerformance = employeePerformance;
+
+            if (lastPerformance == null) {
+                existEmpPerformance.setEmployeePerformanceId(1L);
+            }
+            else {
+                existEmpPerformance.setEmployeePerformanceId(lastPerformance.getEmployeePerformanceId()+1);
+            }
+
             performanceDetail.setComments(employeePerformance.getComments());
             performanceDetail.setIndex(0);
-            performanceDetail.setStatus(employeePerformance.getStatus());
-            performanceDetail.setCurrentValue(employeePerformance.getCurrentValue());
-            performanceDetail.setUpdatedOn(date);
-            performanceDetails.add(performanceDetail);
-            existEmpPerformance.setPerformanceDetail(objectMapper.writeValueAsString(performanceDetails));
         }
         else
         {
@@ -124,14 +152,13 @@ public class PerformanceService implements IPerformanceService {
 
             performanceDetail.setComments(employeePerformance.getComments());
             performanceDetail.setIndex(index);
-            performanceDetail.setStatus(employeePerformance.getStatus());
-            performanceDetail.setCurrentValue(employeePerformance.getCurrentValue());
-            performanceDetail.setUpdatedOn(date);
-            performanceDetails.add(performanceDetail);
-            existEmpPerformance.setPerformanceDetail(objectMapper.writeValueAsString(performanceDetails));
         }
 
-        existEmpPerformance.setUpdatedBy(1L);
+        performanceDetail.setStatus(employeePerformance.getStatus());
+        performanceDetail.setCurrentValue(employeePerformance.getCurrentValue());
+        performanceDetails.add(performanceDetail);
+        existEmpPerformance.setPerformanceDetail(objectMapper.writeValueAsString(performanceDetails));
+        existEmpPerformance.setUpdatedBy(currentUserDetail.getUserDetail().getUserId());
         existEmpPerformance.setUpdatedOn(date);
 
         var result = performanceRepository.save(existEmpPerformance);
@@ -141,36 +168,43 @@ public class PerformanceService implements IPerformanceService {
         return result;
     }
 
-    public List<PerfomanceObjective> ObjectiveInsertUpdateService(PerfomanceObjective objectiveDetail) throws Exception {
+    public Pair<List<PerfomanceObjective>, List<EmployeeRole>> ObjectiveInsertUpdateService(PerfomanceObjective objectiveDetail) throws Exception {
         validateObjectiveDetail(objectiveDetail);
         java.util.Date utilDate = new java.util.Date();
         var date = new java.sql.Timestamp(utilDate.getTime());
 
+        PerfomanceObjective objective;
         Optional<PerfomanceObjective> objectiveData = performanceObjectiveRepository.findById(objectiveDetail.getObjectiveId());
-        var objective = objectiveData.get();
-        if (objective == null) {
+        if(objectiveData.isEmpty()) {
+            var lastObjective = performanceObjectiveRepository.getLastPerformanceObjective();
             objective = objectiveDetail;
-            objective.setCreatedBy(1L);
+            if (lastObjective == null)
+                objective.setObjectiveId(1L);
+            else
+                objective.setObjectiveId(lastObjective.getObjectiveId()+1);
+
+            objective.setCreatedBy(currentUserDetail.getUserDetail().getUserId());
             objective.setCreatedOn(date);
         }
         else
         {
+            objective = objectiveData.get();
             objective.setObjective(objectiveDetail.getObjective());
             objective.setStartValue(objectiveDetail.getStartValue());
             objective.setTargetValue(objectiveDetail.getTargetValue());
-            objective.setObjSeeType(objectiveDetail.isObjSeeType());
+            objective.setCanManagerSee(objectiveDetail.isCanManagerSee());
             objective.setIncludeReview(objectiveDetail.isIncludeReview());
             objective.setProgressMeassureType(objectiveDetail.getProgressMeassureType());
             objective.setTimeFrameStart(objectiveDetail.getTimeFrameStart());
             objective.setTimeFrmaeEnd(objectiveDetail.getTimeFrmaeEnd());
-            objective.setObjectiveType(objectiveDetail.getObjectiveType());
+            objective.setObjectiveTypeId(objectiveDetail.getObjectiveTypeId());
             objective.setDescription(objectiveDetail.getDescription());
             objective.setTagRole(objectiveDetail.getTagRole());
             objective.setUpdatedOn(date);
-            objective.setUpdatedBy(1L);
+            objective.setUpdatedBy(currentUserDetail.getUserDetail().getUserId());
         }
 
-        if (objective.getTagRole().size() > 0)
+        if (objective.getTagRole() != null && objective.getTagRole().size() > 0)
             objective.setTag(objectMapper.writeValueAsString(objective.getTagRole()));
         else
             objective.setTag("[]");
@@ -184,8 +218,7 @@ public class PerformanceService implements IPerformanceService {
         return this.GetPerformanceObjectiveService(filterModel);
     }
 
-    public List<PerfomanceObjective> GetPerformanceObjectiveService(@NotNull FilterModel filterModel)
-    {
+    public Pair<List<PerfomanceObjective>, List<EmployeeRole>> GetPerformanceObjectiveService(@NotNull FilterModel filterModel) throws Exception {
         Pageable paging;
         filterModel.setPageIndex(filterModel.getPageIndex()-1);
         if (filterModel.getSortBy() == null || filterModel.getSortBy() == "")
@@ -196,7 +229,12 @@ public class PerformanceService implements IPerformanceService {
             paging = PageRequest.of(filterModel.getPageIndex(), filterModel.getPageSize(), sort);
         }
 
-        Page<PerfomanceObjective> page = performanceObjectiveRepository.findAll(paging);
+        Page<PerfomanceObjective> page;
+        if (filterModel.getSearchString() == null || filterModel.getSearchString() == "") {
+            page = performanceObjectiveRepository.findAll(paging);
+        } else {
+            page = performanceObjectiveRepository.findByFilter(filterModel.getSearchString(), paging);
+        }
         List<PerfomanceObjective> objectiveDetails = page.getContent();
         objectiveDetails.forEach(x -> {
             if (x.getTag() != null && x.getTag() != "[]") {
@@ -207,8 +245,13 @@ public class PerformanceService implements IPerformanceService {
                     throw new RuntimeException(e);
                 }
             }
+            x.setTotal(page.getTotalElements());
         });
-        return objectiveDetails;
+        var empRole = employeeRoleRepository.findAll();
+        if (empRole == null || empRole.size() <= 0)
+            throw new Exception("Employee role not found. Please contact to admin");
+
+        return new Pair<List<PerfomanceObjective>, List<EmployeeRole>>(objectiveDetails, empRole);
     }
 
     private void validateObjectiveDetail(@NotNull PerfomanceObjective objectiveDetail) throws Exception {
@@ -224,7 +267,7 @@ public class PerformanceService implements IPerformanceService {
         if (objectiveDetail.getTimeFrmaeEnd() == null)
             throw new Exception("Invalid time frame end date selected");
 
-        if (objectiveDetail.getObjectiveType() == null || objectiveDetail.getObjectiveType().isEmpty())
+        if (objectiveDetail.getObjectiveTypeId() == 0)
             throw new Exception("Objective type is invalid");
 
         if (objectiveDetail.getProgressMeassureType() <= 0)
@@ -260,6 +303,9 @@ public class PerformanceService implements IPerformanceService {
 
         if (employeePerformance.getObjectiveId() <= 0)
             throw new Exception("Invalid objective selected. Please select a valid objective");
+
+        if (employeePerformance.getCurrentValue() > employeePerformance.getTargetValue())
+            throw new Exception("New value is greater than targeted value");
     }
 
 
